<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/bg4"
    tools:context=".IpSet">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="225dp"
        android:layout_height="228dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/round_background"
        android:contentDescription="@string/todo"
        android:padding="15dp"
        android:src="@drawable/icon2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_below="@+id/profile"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintVertical_bias="0.27">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/iperror"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/ip_address"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryDark"
                    android:inputType="number|phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_gradient"
                android:text="@string/set_ip"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:layout_gravity="end"
                    android:text="clear"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/kgptc"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintVertical_bias="0.862" />

</androidx.constraintlayout.widget.ConstraintLayout>

